--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -2,6 +2,11 @@
 @import "components/boardroom/main";
 @import "components/ui-utilities";
 
+@import "components/sidebar-element";
+@import "components/boardroom-app";
+@import "components/dashboard-panel";
+@import "components/mentor-element";
+
 @import "pages/boardroom";
 @import "pages/business-infinity";
 @import "pages/entrepreneur";
