--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -2,7 +2,8 @@
 @import "components/boardroom/main";
 @import "components/ui-utilities";
 
-@import "components/sidebar-element";
+// @import "components/sidebar-element";
+@import "components/boardroom/members-sidebar/main";
 @import "components/boardroom-app";
 @import "components/dashboard-panel";
 @import "components/mentor-element";
